# fit

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/commands/: fit-coach.md
.github/workflows/: ci.yml
fit/: __init__.py  alerts.py  analysis.py  apple_health.py  calibration.py  checkin.py  cli.py  config.py  correlations.py  data_health.py  db.py  fit_file.py  fitness.py  garmin.py  goals.py  logging_config.py  milestones.py  narratives.py  periodization.py  plan.py  sync.py  weather.py
fit/report/: generator.py  headline.py  mockup.html
fit/report/sections/: __init__.py  cards.py  charts.py  predictions.py
fit/report/templates/: dashboard.html  (+1 more)
mcp/: server.py
migrations/: 001_schema.sql  002_backfill_garmy.py  003_backfill_weight.py  004_backfill_checkins.py  005_correlations_alerts.sql  006_race_calendar.sql  007_phase2a_schema.py  008_activity_splits.py  009_planned_workouts.py  010_objective_derivation.py  011_splits_extra_columns.sql  013_activity_rpe_feel_compliance.sql
openspec/specs/: project.md
tests/: conftest.py  test_alerts.py  test_analysis.py  test_calibration.py  test_checkin.py  test_cli.py  test_coaching_metrics.py  test_config.py  test_correlations.py  test_dashboard_charts_coverage.py  test_data_health.py  test_db.py  test_doctor.py  test_fit_file.py  test_fitness.py  test_garmin.py  test_goals.py  test_headline.py  test_integration.py  test_narratives.py  test_periodization.py  test_plan.py  test_race_model.py  test_report.py  test_sync.py  test_training_cards.py  test_weather.py
(+77 files in other folders)
